[package]
name = "profl-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3.1"
serde = { version = "1.0.130", features = ["derive"] }
anyhow = "1.0.44"
byteorder = "1.4.3"
bincode = "1.3.3"
argh = "0.1.6"
itertools = "0.10.1"
hdrhistogram = "7.3.0"
smallstr = { version = "0.2.0", features = ['serde', "union"] }
