[package]
name = "profl-cli"
description = "CLI for generating profl reports"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/broxus/profl"
keywords = ["metrics"]
categories = ["development-tools::profiling"]
include = ["src/**/*.rs", "README.md", "LICENSE"]
license-file = "../LICENSE"

[[bin]]
name = "profl"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.44"
argh = "0.1.6"
bincode = "1.3.3"
byteorder = "1.4.3"
hdrhistogram = "7.3.0"
itertools = "0.10.1"
plotters = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
smallstr = { version = "0.2.0", features = ['serde', "union"] }
