[package]
name = "profl"
description = "Simple timings profiler"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/broxus/profl"
keywords = ["metrics"]
categories = ["development-tools::profiling"]
include = ["src/**/*.rs", "README.md", "LICENSE"]
license-file = "../LICENSE"

[dependencies]
bincode = "1.3"
crossbeam-channel = "0.5"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
env_logger = "0.9.0"

[features]
active = []
